[xjwan] add ext to build.gradle. [xjwan] add insert method to HelloDaoImpl

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ dependencies {
             'org.springframework:spring-webmvc:4.0.3.RELEASE',
             'org.apache.velocity:velocity:1.7',
             'org.springframework:spring-context-support:4.0.0.RELEASE',
-            'mysql:mysql-connector-java:5.0.8'
+            'mysql:mysql-connector-java:5.0.8',
+            'org.springframework:spring-jdbc:4.0.3.RELEASE'
+
 
     )
 
