[xjwan & gongsuo] resolve velocity character encoding.

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ repositories {
     mavenCentral()
 }
 
+jettyRun {
+    URIEncoding = 'utf-8'
+}
 
 ext {
 
@@ -22,7 +25,6 @@ dependencies {
             'org.springframework:spring-context-support:4.0.0.RELEASE',
             'mysql:mysql-connector-java:5.0.8',
             'org.springframework:spring-jdbc:4.0.3.RELEASE'
-
 
     )
 
