--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,22 @@
         based on the recommendations of the Application Developer's Guide.
     </description>
 
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter </filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
     <servlet>
         <servlet-name>HelloServlet</servlet-name>
         <servlet-class>com.juzhi.sale.servlet.HelloworldServlet</servlet-class>
@@ -21,12 +37,9 @@
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 
-    <!-- Spring MVC?? -->
-    <!-- ====================================== -->
     <servlet>
         <servlet-name>spring</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <!-- ?????servlet.xml??????????????WEB-INF???????[<servlet-name>]-servlet.xml??spring-servlet.xml -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/spring-servlet.xml</param-value>
@@ -40,14 +53,10 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-
-    <!-- Spring?? -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-
-    <!-- ??Spring Bean???????????????WEB-INF??? -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
