--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,27 @@ ext {
 
 }
 
+project(':'){
+    idea {
+            project {
+                jdkName = JavaVersion.VERSION_1_6
+                languageLevel = JavaVersion.VERSION_1_6
+
+                ipr.withXml { xml ->
+                    def mapping = xml.node.component.find { it.@name == "VcsDirectoryMappings" }.mapping
+                    mapping.@vcs = 'Git'
+                    mapping.@directory = '$PROJECT_DIR$'
+                }
+            }
+
+            workspace.iws.withXml { provider ->
+                def junitDefaults = provider.node.component.find { it.@name == 'RunManager' }.configuration.find { it.@type == 'JUnit' }
+                junitDefaults.option.find { it.@name == 'WORKING_DIRECTORY' }.@value = '$MODULE_DIR$'
+            }
+        }
+
+}
+
 dependencies {
     compile(
             'javax.servlet:servlet-api:2.5',
