--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,9 @@ dependencies {
             'org.apache.velocity:velocity:1.7',
             'org.springframework:spring-context-support:4.0.0.RELEASE',
             'mysql:mysql-connector-java:5.0.8',
-            'org.springframework:spring-jdbc:4.0.3.RELEASE'
+            'org.springframework:spring-jdbc:4.0.3.RELEASE',
+            'log4j:log4j:1.2.17'
+
 
     )
 
