--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,11 @@ dependencies {
             'org.springframework:spring-context-support:4.0.0.RELEASE',
             'mysql:mysql-connector-java:5.0.8',
             'org.springframework:spring-jdbc:4.0.3.RELEASE',
-            'log4j:log4j:1.2.17'
+            'log4j:log4j:1.2.17',
+            'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
+            'net.sf.spring-json:spring-json:1.3.1'
+
+
 
 
     )
