[gschen] add spring security support.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
             'org.springframework:spring-jdbc:4.0.3.RELEASE',
             'log4j:log4j:1.2.17',
             'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
+            'org.springframework.security:spring-security-web:3.2.3.RELEASE',
+            'org.springframework.security:spring-security-config:3.2.3.RELEASE'
+
 
 
 
